fix sticky element on left of page and fix some alignment issues. Also fixed weird text issue with screen shrink

--- a/Resources/style.css
+++ b/Resources/style.css
@@ -1,6 +1,7 @@
 html {
     box-sizing: border-box;
     font-size: 16px;
+    text-align: center;
   }
   
   *, *:before, *:after {
@@ -30,7 +31,7 @@ html {
     border: 5px solid black;
     height: 500px;
     width: 100%;
-    padding: 0;
+    padding-bottom: 20px;
     margin: 0 auto;
     background-image: url(https://cdn.pixabay.com/photo/2017/05/09/16/34/crayfish-2298734_1280.jpg);
     overflow: auto;
@@ -77,19 +78,20 @@ body {
     
 }
 .main_quote {
+    position: fixed;
+    margin-left: 0;
+    background-color: yellow;
     font-family: 'Kalam', cursive;
-    font-size: 24px;
-    background-color: black;
-    color: rgb(252, 206, 1);
-    z-index: 1;
-    display: inline;
-    position: sticky;
-    top: 50px;
-    margin: 0, 500px, 0, 0;
+    
+    
+  
+    
 }
 .description {
     font-family: 'Kalam', cursive;
     font-size: 20px;
+    border: 1px red solid;
+    
 }
 
 ul {
@@ -107,8 +109,10 @@ h2 {
 }
 
 .Type {
+  display: flexbox;
   font-size: 25px;
   text-align: center;
+  padding-top: 20px;
 }
 .box {
   background-color: cadetblue;
@@ -120,9 +124,4 @@ h2 {
   left: 50%;
   overflow: auto;
 
-}
-
-p {
-  margin: 0 500px;
-  text-align: center;
 }
